--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,15 +1,10 @@
-.container {
+footer {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
 }
 
-.container nav {
-  align-items: flex-end;
-  display: flex;
-}
-
-.container nav ul {
+ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
@@ -24,8 +19,4 @@ li {
 
 a {
   text-decoration: none;
-}
-
-.selected {
-  font-weight: bold;
 }
